--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Static HTML Site</title>
   </head>
   <body>
-    <p>This is the first paragraph in a simple Static HTML site. There is no 
-      <strong>CSS</strong> or <strong>JavaScript</strong>.</p>
-    </body>
+    <p>
+      This is the first paragraph in a simple Static HTML site. There is no
+      <strong>CSS</strong> or <strong>JavaScript</strong>.
+    </p>
   </body>
 </html>
